mention -Djava.library.path=./